syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/supernode";

package supernode;

service ProcessUserdata {
    // Session informs primary supernode about its `nodeID` and `sessID` it wants to connect to.
    // The stream is used by the parties to inform each other about the cancellation of the task.
    rpc Session(stream SessionRequest) returns (stream SessionReply);
}

message SessionRequest {
    string nodeID = 1;
}
message SessionReply {
    string sessID = 1;
}



